--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "monolog/monolog": "~2.0",
         "guzzlehttp/guzzle": "^7.4.5",
-        "illuminate/support": "^9"
+        "illuminate/support": "^9.0"
     }
 }
