--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^8.1",
         "monolog/monolog": "~2.0",
-        "guzzlehttp/guzzle": "^7.4.5",
-        "illuminate/support": "^9.0"
+        "guzzlehttp/guzzle": "^7.4",
+        "illuminate/support": "^9.0|^10.0"
     }
 }
