--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "monolog/monolog": "~2.0",
+        "monolog/monolog": "^2.0|^3.0",
         "guzzlehttp/guzzle": "^7.4",
         "illuminate/support": "^9.0|^10.0"
     }
