--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "monolog/monolog": "^3.0",
         "guzzlehttp/guzzle": "^7.4",
-        "illuminate/support": "^10.0"
+        "illuminate/support": "^10.0|^11.0"
     }
 }
